Se adiciona el web terpel

--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/App.config
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/App.config
@@ -16,6 +16,10 @@
             <setting name="MetalLiqViajes_Forms_EventsSatrac_getEvents" serializeAs="String">
                 <value>https://webcloud.satrack.com/WebServiceEventos/getEvents.asmx</value>
             </setting>
+            <setting name="MetalLiqViajes_Forms_com_terpel_movilidad_Integrator"
+                serializeAs="String">
+                <value>https://movilidad.terpel.com/Terpel.ConsultaFlotas/Integrator.asmx</value>
+            </setting>
         </MetalLiqViajes_Forms.Properties.Settings>
     </applicationSettings>
     <userSettings>
