--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/Properties/Settings.settings
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="DiasHistorico" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="MetalLiqViajes_Forms_com_terpel_movilidad_Integrator" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://movilidad.terpel.com/Terpel.ConsultaFlotas/Integrator.asmx</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
