--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/MetalLiqViajes_Forms.csproj
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/MetalLiqViajes_Forms.csproj
@@ -89,6 +89,10 @@
     </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.EnterpriseServices" />
@@ -140,6 +144,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Terpel.cs" />
     <Compile Include="Util\UtilClass.cs" />
     <Compile Include="Web References\com.terpel.movilidad\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -296,6 +301,7 @@
     <None Include="images\NewDocumentHS.png" />
     <None Include="images\11.png" />
     <Content Include="images\edit.png" />
+    <Content Include="images\Terpel.png" />
     <Content Include="images\TitleImages\CloudControl.png" />
     <Content Include="images\TitleImages\edit.png" />
     <Content Include="images\TitleImages\GridView.png" />
