--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/MetalLiqViajes_Forms.csproj
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/MetalLiqViajes_Forms.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Credentials.cs" />
+    <Compile Include="Util\Parametros.cs" />
     <Compile Include="Util\Terpel.cs" />
     <Compile Include="Util\UtilClass.cs" />
     <Compile Include="Web References\com.terpel.movilidad\Reference.cs">
