Ajuste terpel Setting

--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/App.config
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/App.config
@@ -36,6 +36,9 @@
             <setting name="DiasHistorico" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="PathFacturaTerpel" serializeAs="String">
+                <value>C:\Metal\Terpel</value>
+            </setting>
         </MetalLiqViajes_Forms.Properties.Settings>
     </userSettings>
 </configuration>
