--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/Properties/Settings.settings
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="MetalLiqViajes_Forms_com_terpel_movilidad_Integrator" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">https://movilidad.terpel.com/Terpel.ConsultaFlotas/Integrator.asmx</Value>
     </Setting>
+    <Setting Name="PathFacturaTerpel" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:\Metal\Terpel</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
