--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/packages.config
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExcelDataReader" version="3.4.0" targetFramework="net452" />
+  <package id="ExcelDataReader.DataSet" version="3.4.0" targetFramework="net452" />
   <package id="GMap.NET.WindowsForms" version="1.7.5" targetFramework="net452" />
-  <package id="LinqToExcel" version="1.11.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net452" />
   <package id="WhatsAppAPI" version="15.4.29" targetFramework="net452" />
 </packages>
