--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/App.config
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/App.config
@@ -39,6 +39,12 @@
             <setting name="PathFacturaTerpel" serializeAs="String">
                 <value>C:\Metal\Terpel</value>
             </setting>
+            <setting name="TipoTerpel" serializeAs="String">
+                <value>83</value>
+            </setting>
+            <setting name="NitTerpel" serializeAs="String">
+                <value>830095213</value>
+            </setting>
         </MetalLiqViajes_Forms.Properties.Settings>
     </userSettings>
 </configuration>
