--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/MetalLiqViajes_Forms.csproj
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/MetalLiqViajes_Forms.csproj
@@ -220,6 +220,7 @@
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.TercerosList.datasource" />
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.TipoVehiculo.datasource" />
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.VehiculoCCosto.datasource" />
+    <None Include="Properties\DataSources\LiqViajes_Bll_Data.VentasFlotaDetalle.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
