--- a/MetalLiqViajes_Forms/MetalLiqViajes_Forms/MetalLiqViajes_Forms.csproj
+++ b/MetalLiqViajes_Forms/MetalLiqViajes_Forms/MetalLiqViajes_Forms.csproj
@@ -27,11 +27,11 @@
     <ProductName>Liquidación Viajes</ProductName>
     <PublisherName>Liquidación Viajes</PublisherName>
     <SuiteName>Liquidación Viajes LTDA</SuiteName>
-    <MinimumRequiredVersion>2018.5.5.0</MinimumRequiredVersion>
+    <MinimumRequiredVersion>2018.5.5.1</MinimumRequiredVersion>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>default.htm</WebPage>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>2018.5.5.0</ApplicationVersion>
+    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationVersion>2018.5.5.1</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -127,11 +127,11 @@
     <Compile Include="CrearViaje.Designer.cs">
       <DependentUpon>CrearViaje.cs</DependentUpon>
     </Compile>
-    <Compile Include="fMain.cs">
+    <Compile Include="fDmdCambioNit.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="fMain.Designer.cs">
-      <DependentUpon>fMain.cs</DependentUpon>
+    <Compile Include="fDmdCambioNit.Designer.cs">
+      <DependentUpon>fDmdCambioNit.cs</DependentUpon>
     </Compile>
     <Compile Include="fMenuPrincipal.cs">
       <SubType>Form</SubType>
@@ -175,6 +175,7 @@
     <Compile Include="Util\Excel.cs" />
     <Compile Include="Util\Parametros.cs" />
     <Compile Include="Util\Terpel.cs" />
+    <Compile Include="Util\TipoMovimiento.cs" />
     <Compile Include="Util\UtilClass.cs" />
     <Compile Include="Web References\com.terpel.movilidad\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -189,8 +190,8 @@
     <EmbeddedResource Include="CrearViaje.resx">
       <DependentUpon>CrearViaje.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="fMain.resx">
-      <DependentUpon>fMain.cs</DependentUpon>
+    <EmbeddedResource Include="fDmdCambioNit.resx">
+      <DependentUpon>fDmdCambioNit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fMenuPrincipal.resx">
       <DependentUpon>fMenuPrincipal.cs</DependentUpon>
@@ -241,6 +242,7 @@
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.VehiculoCCosto.datasource" />
     <None Include="Properties\DataSources\LiqViajes_Bll_Data.VentasFlotaDetalle.datasource" />
     <None Include="Properties\DataSources\MetalLiqViajes_Forms.Util.ExcelTerpel.datasource" />
+    <None Include="Properties\DataSources\TipoMovimiento.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
